merging branch for bug #3